--- a/app/globals.css
+++ b/app/globals.css
@@ -17,23 +17,35 @@
 
 @layer utilities {
   .btn {
-    @apply py-4 px-4 bg-orange-500 hover:bg-opacity-70 rounded-[30px] text-white text-lg font-semibold;
+    @apply self-center py-4 w-2/3 px-4 bg-orange-500 hover:bg-opacity-70 rounded-[30px] text-white text-lg font-semibold;
   }
 
+  .nav {
+    @apply flex justify-between items-center px-10 md:px-20 py-6 text-xl font-semibold;
+  }
+  .search-input {
+    @apply py-3 w-2/3 bg-white rounded-md text-gray-500 px-2;
+  }
+  .search-btn {
+    @apply w-1/6 md:w-1/3 truncate bg-gray-500 py-3 px-2 text-white rounded-md text-center;
+  }
+  .landing-title {
+    @apply text-8xl font-semibold lg:text-6xl md:text-4xl;
+  }
   .head-text {
-    @apply mt-4 text-6xl leading-[72px] font-bold tracking-[-1.2px] text-white;
+    @apply mt-4 text-6xl leading-[72px] font-bold tracking-[-1.2px] text-secondary;
   }
 
   .section-text {
-    @apply text-white text-[32px] font-semibold;
+    @apply text-black text-[32px] font-semibold;
   }
 
   .small-text {
-    @apply flex gap-2 text-sm font-medium text-white;
+    @apply flex gap-2 text-sm font-medium text-black;
   }
 
   .paragraph-text {
-    @apply text-xl leading-[30px] text-white-600;
+    @apply text-xl leading-[30px] text-gray-600;
   }
 
   .hero-carousel {
@@ -66,11 +78,11 @@
   }
 
   .product-image {
-    @apply bg-white flex-grow xl:max-w-[50%] max-w-full py-16 border border-[#CDDBFF] rounded-[17px];
+    @apply bg-white flex-grow xl:max-w-[50%] max-w-full w-8/12 md:w-full py-16 border border-[#CDDBFF] rounded-[17px];
   }
 
   .product-info {
-    @apply flex items-center flex-wrap gap-10 py-6 border-y border-y-[#E4E4E4];
+    @apply flex items-start flex-wrap gap-10 py-6 border-y border-y-[#E4E4E4];
   }
 
   .product-hearts {
@@ -110,11 +122,6 @@
     @apply px-5 py-3 text-white text-base font-semibold border border-secondary bg-secondary rounded-lg mt-8;
   }
 
-  /* NAVBAR */
-  .nav {
-    @apply flex justify-between items-center px-6 md:px-20 py-4;
-  }
-
   .nav-logo {
     @apply font-spaceGrotesk text-[21px] text-white font-bold;
   }
@@ -126,11 +133,11 @@
 
   /* PRODUCT CARD */
   .product-card {
-    @apply sm:w-[292px] sm:max-w-[292px] w-full flex-1 flex flex-col gap-4 rounded-md;
+    @apply w-[292px] max-w-[292px] max-h-[400px] min-h-[400px] h-[400px] flex-1 flex flex-col justify-end gap-4 rounded-md p-4;
   }
 
   .product-card_img-container {
-    @apply flex-1 relative flex flex-col gap-5 p-4 rounded-md;
+    @apply flex-1 flex flex-col gap-5 p-4 rounded-md;
   }
 
   .product-card_img {
@@ -138,12 +145,12 @@
   }
 
   .product-title {
-    @apply text-white text-xl leading-6 font-semibold truncate;
+    @apply w-[80%] text-lg leading-6 font-semibold truncate;
   }
 
   /* SEARCHBAR INPUT */
   .searchbar-input {
-    @apply flex-1 min-w-[200px] w-full p-3 border border-gray-300 rounded-lg shadow-xs text-base text-gray-500 focus:outline-none;
+    @apply flex-1 min-w-[200px] w-1/3 p-3 border border-gray-300 rounded-lg shadow-xs text-base text-gray-500 focus:outline-none;
   }
 
   .searchbar-btn {
